--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block extrahead %}
-  <link rel="manifest" href="https://yldales.github.io/isla-nycta-rules/manifest.webmanifest" />
+<link rel="manifest" href="https://yldales.github.io/isla-nycta-rules/manifest.webmanifest" />
 {% endblock %}
 
 {% block tabs %}
@@ -10,4 +10,19 @@
   <div id="nycta-reboot-timer"></div>
   <div id="nycta-map-cycle"></div>
 </div>
+{% endblock %}
+
+{% block analytics %}
+<script>
+  var _paq = window._paq = window._paq || [];
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function () {
+    var u = "//visitors.theeverseeker.fr/";
+    _paq.push(['setTrackerUrl', u + 'matomo.php']);
+    _paq.push(['setSiteId', '1']);
+    var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
+    g.async = true; g.src = u + 'matomo.js'; s.parentNode.insertBefore(g, s);
+  })();
+</script>
 {% endblock %}
