--- a/overrides/main.html
+++ b/overrides/main.html
@@ -19,10 +19,10 @@
   _paq.push(['enableLinkTracking']);
   (function () {
     var u = "//visitors.theeverseeker.fr/";
-    _paq.push(['setTrackerUrl', u + 'matomo.php']);
+    _paq.push(['setTrackerUrl', u + 'not_matomo.php']);
     _paq.push(['setSiteId', '1']);
     var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
-    g.async = true; g.src = u + 'matomo.js'; s.parentNode.insertBefore(g, s);
+    g.async = true; g.src = u + 'not_matomo.js'; s.parentNode.insertBefore(g, s);
   })();
 </script>
 {% endblock %}
