Add Google site verification meta tag

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -2,6 +2,7 @@
 
 {% block extrahead %}
 <link rel="manifest" href="https://yldales.github.io/isla-nycta-rules/manifest.webmanifest" />
+<meta name="google-site-verification" content="pywhKwubdygGmznpRn8A4bjOG4YHLGVpk_5uBqx16zE" />
 {% endblock %}
 
 {% block tabs %}
