Add more preconnect links

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -3,6 +3,9 @@
 {% block extrahead %}
 <link rel="manifest" href="https://yldales.github.io/isla-nycta-rules/manifest.webmanifest" />
 <link rel="preconnect" href="https://visitors.theeverseeker.fr" />
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" />
+<link rel="preconnect" href="https://unpkg.com" />
 <meta name="google-site-verification" content="pywhKwubdygGmznpRn8A4bjOG4YHLGVpk_5uBqx16zE" />
 {% endblock %}
 
