Add sitemap link to main.html

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -6,6 +6,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" />
 <link rel="preconnect" href="https://unpkg.com" />
+<link rel="sitemap" href="https://yldales.github.io/isla-nycta-rules/sitemap.xml">
 <meta name="google-site-verification" content="pywhKwubdygGmznpRn8A4bjOG4YHLGVpk_5uBqx16zE" />
 {% endblock %}
 
